<resources>
    <string name="app_name">Just Java</string>
    <string name="quantity">QUANTITY</string>
    <string name="order">ORDER</string>
    <string name="_0">0</string>
    <string name="price">price</string>
    <string name="dollar">$0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="_2">2</string>
    <string name="order_summary">Order Summary</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="name">Name</string>
</resources>
